--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@styles/*": ["src/styles/*"],
-      "@screens/*": ["src/screens/*"]
+      "@styles/*": ["app/styles/*"],
+      "@screens/*": ["app/screens/*"]
     }
   }
 }
