--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
-    "@medusajs/medusa-js": "^6.1.10",
+    "@medusajs/js-sdk": "^2.4.0",
+    "@medusajs/types": "^2.3.1",
     "@react-native-vector-icons/ant-design": "^4.4.2",
     "@react-native-vector-icons/common": "^11.0.0",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@tanstack/react-query": "^5.64.2",
+    "core-js": "^3.40.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-gesture-handler": "^2.22.1",
     "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated-carousel": "^4.0.0-canary.22",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
+    "react-native-url-polyfill": "^2.0.0",
     "tailwind-variants": "^0.3.1",
     "tailwindcss": "^3.4.17"
   },
@@ -36,6 +42,7 @@
     "@react-native/eslint-config": "0.76.6",
     "@react-native/metro-config": "0.76.6",
     "@react-native/typescript-config": "0.76.6",
+    "@tanstack/eslint-plugin-query": "^5.64.2",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
