--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "@styles/*": ["app/styles/*"],
       "@images/*": ["app/images/*"],
       "@screens/*": ["app/screens/*"],
-      "@components/*": ["app/components/*"]
+      "@components/*": ["app/components/*"],
+      "@api/*": ["app/api/*"]
     }
   }
 }
