--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@medusajs/js-sdk": "^2.4.0",
     "@medusajs/types": "^2.3.1",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-native-vector-icons/ant-design": "^4.4.2",
     "@react-native-vector-icons/common": "^11.0.0",
     "@react-navigation/elements": "^2.2.5",
@@ -21,6 +23,7 @@
     "@tanstack/react-query": "^5.64.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-reanimated": "^3.16.7",
@@ -30,7 +33,9 @@
     "react-native-url-polyfill": "^2.0.0",
     "tailwind-variants": "^0.3.1",
     "tailwindcss": "^3.4.17",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "yup": "^1.6.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
