--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@tanstack/react-query": "^5.64.2",
+    "dayjs": "^1.11.13",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
