--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-native": "0.76.6",
+    "react-native": "0.77.0",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-reanimated-carousel": "^4.0.0-canary.22",
@@ -45,10 +45,11 @@
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.76.6",
-    "@react-native/eslint-config": "0.76.6",
-    "@react-native/metro-config": "0.76.6",
-    "@react-native/typescript-config": "0.76.6",
+    "@react-native/babel-preset": "0.77.0",
+    "@react-native/eslint-config": "0.77.0",
+    "@react-native/metro-config": "0.77.0",
+    "@react-native/typescript-config": "0.77.0",
+     "@types/jest": "^29.5.13",
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
