--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fluent/bundle": "^0.19.1",
+    "@fluent/langneg": "^0.7.0",
+    "@fluent/react": "^0.15.2",
     "@hookform/resolvers": "^3.10.0",
     "@medusajs/js-sdk": "^2.6.1",
     "@medusajs/types": "^2.6.1",
@@ -27,6 +30,7 @@
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.77.0",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "^2.22.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-reanimated-carousel": "^4.0.0-canary.22",
@@ -63,5 +67,6 @@
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "yarn@1.22.21+sha512.ca75da26c00327d26267ce33536e5790f18ebd53266796fbb664d2a4a5116308042dd8ee7003b276a20eace7d3c5561c3577bdd71bcb67071187af124779620a"
 }
