--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@images/*": ["app/images/*"],
       "@screens/*": ["app/screens/*"],
       "@components/*": ["app/components/*"],
+      "@constants/*": ["app/constants/*"],
       "@api/*": ["app/api/*"],
       "@utils/*": ["app/utils/*"],
       "@data/*": ["app/data/*"],
