--- a/package.json
+++ b/package.json
@@ -16,53 +16,53 @@
     "@hookform/resolvers": "^3.10.0",
     "@medusajs/js-sdk": "^2.8.7",
     "@medusajs/types": "^2.8.7",
-    "@react-native-async-storage/async-storage": "^2.1.1",
-    "@react-native-picker/picker": "^2.11.0",
-    "@react-native-vector-icons/ant-design": "^4.4.2",
-    "@react-native-vector-icons/common": "^11.0.0",
-    "@react-native-vector-icons/material-design-icons": "^7.4.47",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-vector-icons/ant-design": "^12.0.1",
+    "@react-native-vector-icons/common": "^12.0.1",
+    "@react-native-vector-icons/material-design-icons": "^12.0.1",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
     "@tanstack/react-query": "^5.64.2",
     "dayjs": "^1.11.13",
     "nativewind": "^4.1.23",
-    "react": "19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-native": "0.79.2",
+    "react": "19.1.0",
+    "react-hook-form": "^7.6.0",
+    "react-native": "0.80.1",
     "react-native-element-dropdown": "^2.12.4",
-    "react-native-gesture-handler": "^2.22.1",
-    "react-native-reanimated": "^3.16.7",
-    "react-native-reanimated-carousel": "^4.0.0-canary.22",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.6.0",
+    "react-native-gesture-handler": "^2.27.1",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-reanimated-carousel": "^4.0.2",
+    "react-native-safe-area-context": "^5.5.1",
+    "react-native-screens": "4.11.1",
     "react-native-url-polyfill": "^2.0.0",
-    "tailwind-variants": "^0.3.1",
+    "tailwind-variants": "1.0.0",
     "tailwindcss": "^3.4.17",
-    "zod": "^3.24.1"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "18.0.0",
-    "@react-native-community/cli-platform-android": "18.0.0",
-    "@react-native-community/cli-platform-ios": "18.0.0",
-    "@react-native/babel-preset": "0.79.2",
-    "@react-native/eslint-config": "0.79.2",
-    "@react-native/metro-config": "0.79.2",
-    "@react-native/typescript-config": "0.79.2",
+    "@react-native-community/cli": "19.0.0",
+    "@react-native-community/cli-platform-android": "19.0.0",
+    "@react-native-community/cli-platform-ios": "19.0.0",
+    "@react-native/babel-preset": "0.80.1",
+    "@react-native/eslint-config": "0.80.1",
+    "@react-native/metro-config": "0.80.1",
+    "@react-native/typescript-config": "0.80.1",
     "@tanstack/eslint-plugin-query": "^5.64.2",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
-    "@types/react-test-renderer": "^19.0.0",
+    "@types/react": "^19.1.0",
+    "@types/react-test-renderer": "^19.1.0",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.11",
-    "react-test-renderer": "19.0.0",
+    "react-test-renderer": "19.1.0",
     "typescript": "5.0.4"
   },
   "engines": {
