--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@react-navigation/native-stack": "^7.3.21",
     "@tanstack/react-query": "^5.64.2",
     "dayjs": "^1.11.13",
-    "nativewind": "^4.1.23",
+    "nativewind": "^4.2.0",
     "react": "19.1.0",
     "react-hook-form": "^7.6.0",
     "react-native": "0.80.1",
@@ -37,7 +37,8 @@
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "4.11.1",
     "react-native-url-polyfill": "^2.0.0",
-    "tailwind-variants": "1.0.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^3.1.1",
     "tailwindcss": "^3.4.17",
     "zod": "^3.25.76"
   },
